--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <style>
         body{
             margin: 0px;
+            background-color: #030303;
         }
         #top-nav-bar {
             font-size: 18px;
