--- a/index.html
+++ b/index.html
@@ -92,9 +92,8 @@
             font-size: 50px;
         }
         #links, #about-me {
-            color: rgb(41, 41, 41);
-            background-color: #dddddd;
-            background: linear-gradient(to top right, #808080 0%, #dddddd 100%);
+            color: white;
+            background: #353535;
             border-radius: 10px;
             padding: 15px;
             margin-left: 15px;
