Set font family style to Segoe UI

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         body{
             margin: 0px;
             background-color: #030303;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
         #top-nav-bar {
             font-size: 18px;
