Add style configuration for heading card background image

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </body>
     <noscript>Please enable JavaScript in your browser settings. This page doesn't really need it, but do it anyway.</noscript>
     <style>
-        body{
+        body {
             margin: 0px;
             background-color: #030303;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -84,7 +84,11 @@
         #heading-container {
             color: white;
             background-color: rgb(126, 39, 177);
-            padding: 20px;
+            background: url("resources/bg_3.jpg");
+            padding: 100px;
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
             border-radius: 10px;
             margin-left: 15px;
             margin-right: 15px;
