Make heading container ids JavaScript-safe

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <br>
         <br>
         <center>
-            <div id="heading-container">
+            <div id="heading_container">
                 <h1>notsniped</h1>
                 <br>
                 <h3>I make code. Sometimes it works, sometimes it doesn't.</h3>
@@ -81,7 +81,7 @@
             margin-left: 2.5px;
             margin-right: 2.5px;
         }
-        #heading-container {
+        #heading_container {
             color: white;
             background-color: rgb(126, 39, 177);
             background: url("resources/bg_3.jpg");
@@ -93,7 +93,7 @@
             margin-left: 15px;
             margin-right: 15px;
         }
-        #heading-container h1 {
+        #heading_container h1 {
             font-size: 50px;
         }
         #links, #about-me {
