Fix heading card background image property

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         #heading_container {
             color: white;
             background-color: rgb(126, 39, 177);
-            background: url("resources/bg_3.jpg");
+            background-image: url("resources/bg_3.jpg");
             padding: 100px;
             background-position: center;
             background-size: cover;
