Add code for heading card background image carousel

--- a/index.html
+++ b/index.html
@@ -118,4 +118,5 @@
             window.alert("Fun Fact: I was too lazy to make a carrd, so I made an entire website.")
         }
     </script>
+    <script src="main.js"></script>
 </html>
