Add linking tag for CSS source file

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>notsniped's bio</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <div id="top-nav-bar">
