Update some text in about me

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 <hr>
                 <ul>
                     <li>✅ Certified dumbass</li>
-                    <li>👨 he/him | 15 years old (9th grade)</li>
+                    <li>👨 he/him | 17 years old (11th grade, PCMC)</li>
                     <li>🇮🇳 Indian</li>
                     <li>💻 Python/JavaScript/web developer</li>
                     <li>🎥 YouTuber and Gamer</li>
-                    <li>🤖 Owner of isobot</li>
+                    <li>🤖 Owner of isobot, and other Discord Bot Projects</li>
                 </ul>
             </div>
             <br>
@@ -62,6 +62,6 @@
             </div>
         </center>
     </body>
-    <noscript>Please enable JavaScript in your browser settings. This page doesn't really need it, but do it anyway.</noscript>
+    <noscript>Please enable JavaScript in your browser settings. This page doesn't really need it, but do it anyway because it would be nice.</noscript>
     <script src="main.js"></script>
 </html>
