--- a/index.html
+++ b/index.html
@@ -17,18 +17,17 @@
         <br>
         <br>
         <br>
+        <center>
         <div id="main-page-content">
-            <center>
-                <div id="heading_container">
-                    <h1>notsniped</h1>
-                    <br>
-                    <h3>I make code. Sometimes it works, sometimes it doesn't.</h3>
-                </div>
-            </center>
+            <div class="item-card" id="heading_container">
+                <h1>notsniped</h1>
+                <br>
+                <h3>I make code. Sometimes it works, sometimes it doesn't.</h3>
+            </div>
             <br>
             <hr>
             <br>
-            <div id="about-me">
+            <div class="item-card" id="about-me">
                 <label class="div-heading">About me</label>
                 <hr>
                 <ul>
@@ -42,7 +41,7 @@
             </div>
             <br>
             <br>
-            <div id="links">
+            <div class="item-card" id="links">
                 <label class="div-heading">Some of my links that you can use</label>
                 <hr>
                 <ul>
@@ -56,6 +55,7 @@
         <br>
         <br>
         <br>
+        </center>
         <center>
             <div id="footer">
                 &copy; notsniped 2023-present | This page is open-source and licensed with the GPL 3.0 license.
