--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <body>
         <div id="top-nav-bar">
             <label id="title">notsniped's bio</label>
-            <a class="nav-bar-link" href="#">Main</a>
-            <a class="nav-bar-link" href="https://discord.gg/jjj5vYdWMM">Discord Server</a>
-            <a class="nav-bar-link" href="#links">Links</a>
-            <label id="fun-fact" onclick="fun_fact()" title="Click me!">Fun Fact</label>
+            <a class="button nav-bar-link" href="#">Main</a>
+            <a class="button nav-bar-link" href="https://discord.gg/jjj5vYdWMM">Discord Server</a>
+            <a class="button nav-bar-link" href="#links">Links</a>
+            <label class="button" id="fun-fact" onclick="fun_fact()" title="Click me!">Fun Fact</label>
         </div>
         <br>
         <br>
