--- a/index.html
+++ b/index.html
@@ -13,48 +13,43 @@
             <a class="button nav-bar-link" href="#links">Links</a>
             <label class="button" id="fun-fact" onclick="fun_fact()" title="Click me!">Fun Fact</label>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
         <center>
-        <div id="main-page-content">
-            <div class="item-card" id="heading_container">
+            <div class="banner" id="heading_container">
                 <h1>notsniped</h1>
-                <br>
+                <hr>
                 <h3>I make code. Sometimes it works, sometimes it doesn't.</h3>
             </div>
-            <br>
-            <hr>
-            <br>
-            <div class="item-card" id="about-me">
-                <label class="div-heading">About me</label>
-                <hr>
-                <ul>
-                    <li>✅ Certified dumbass</li>
-                    <li>👨 he/him | 17 years old (11th grade, PCMC)</li>
-                    <li>🇮🇳 Indian</li>
-                    <li>💻 Python/JavaScript/web developer</li>
-                    <li>🎥 YouTuber and Gamer</li>
-                    <li>🤖 Owner of isobot, and other Discord Bot Projects</li>
-                </ul>
+            <div id="main-page-content">
+                <br>
+                <br>
+                <div class="item-card" id="about-me">
+                    <label class="div-heading">About me</label>
+                    <hr>
+                    <ul>
+                        <li>✅ Certified dumbass</li>
+                        <li>👨 he/him | 17 years old (11th grade, PCMC)</li>
+                        <li>🇮🇳 Indian</li>
+                        <li>💻 Python/JavaScript/web developer</li>
+                        <li>🎥 YouTuber and Gamer</li>
+                        <li>🤖 Owner of isobot, and other Discord Bot Projects</li>
+                    </ul>
+                </div>
+                <br>
+                <br>
+                <div class="item-card" id="links">
+                    <label class="div-heading">Some of my links that you can use</label>
+                    <hr>
+                    <ul>
+                        <li><a href="https://discord.gg/jjj5vYdWMM">Discord Server</a></li>
+                        <li><a href="https://instagram.com/notsniped">Instagram</a></li>
+                        <li><a href="https://github.com/notsniped">GitHub</a></li>
+                        <li><a href="https://github.com/PyBotDevs">NKA (my GitHub organization)</a></li>
+                    </ul>
+                </div>
             </div>
             <br>
             <br>
-            <div class="item-card" id="links">
-                <label class="div-heading">Some of my links that you can use</label>
-                <hr>
-                <ul>
-                    <li><a href="https://discord.gg/jjj5vYdWMM">Discord Server</a></li>
-                    <li><a href="https://instagram.com/notsniped">Instagram</a></li>
-                    <li><a href="https://github.com/notsniped">GitHub</a></li>
-                    <li><a href="https://github.com/PyBotDevs">NKA (my GitHub organization)</a></li>
-                </ul>
-            </div>
-        </div>
-        <br>
-        <br>
-        <br>
+            <br>
         </center>
         <center>
             <div id="footer">
