Fix `top-nav-bar` where items overflow on mobile devices

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <a class="button nav-bar-link" href="https://discord.gg/jjj5vYdWMM">Discord Server</a>
             <a class="button nav-bar-link" href="#links">Links</a>
             <label class="button" id="fun-fact" onclick="fun_fact()" title="Click me!">Fun Fact</label>
+            <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label> <!--Used for preventing accidental cutoff of menu items on small screens-->
         </div>
         <center>
             <div class="banner" id="heading_container">
