Fix accidental center alignment for objects in main content

--- a/index.html
+++ b/index.html
@@ -20,38 +20,38 @@
                 <hr>
                 <h3>I make code. Sometimes it works, sometimes it doesn't.</h3>
             </div>
-            <div id="main-page-content">
-                <br>
-                <br>
-                <div class="item-card" id="about-me">
-                    <label class="div-heading">About me</label>
-                    <hr>
-                    <ul>
-                        <li>✅ Certified dumbass</li>
-                        <li>👨 he/him | 17 years old (11th grade, PCMC)</li>
-                        <li>🇮🇳 Indian</li>
-                        <li>💻 Python/JavaScript/web developer</li>
-                        <li>🎥 YouTuber and Gamer</li>
-                        <li>🤖 Owner of isobot, and other Discord Bot Projects</li>
-                    </ul>
-                </div>
-                <br>
-                <br>
-                <div class="item-card" id="links">
-                    <label class="div-heading">Some of my links that you can use</label>
-                    <hr>
-                    <ul>
-                        <li><a href="https://discord.gg/jjj5vYdWMM">Discord Server</a></li>
-                        <li><a href="https://instagram.com/notsniped">Instagram</a></li>
-                        <li><a href="https://github.com/notsniped">GitHub</a></li>
-                        <li><a href="https://github.com/PyBotDevs">NKA (my GitHub organization)</a></li>
-                    </ul>
-                </div>
+        </center>
+        <div id="main-page-content">
+            <br>
+            <br>
+            <div class="item-card" id="about-me">
+                <label class="div-heading">About me</label>
+                <hr>
+                <ul>
+                    <li>✅ Certified dumbass</li>
+                    <li>👨 he/him | 17 years old (12th grade, PCMC)</li>
+                    <li>🇮🇳 Indian</li>
+                    <li>💻 Python/JavaScript/web developer</li>
+                    <li>🎥 YouTuber and Gamer</li>
+                    <li>🤖 Owner of isobot, and other Discord Bot Projects</li>
+                </ul>
             </div>
             <br>
             <br>
-            <br>
-        </center>
+            <div class="item-card" id="links">
+                <label class="div-heading">My Links</label>
+                <hr>
+                <ul>
+                    <li><a href="https://discord.gg/jjj5vYdWMM">Discord Server</a></li>
+                    <li><a href="https://instagram.com/notsniped">Instagram</a></li>
+                    <li><a href="https://github.com/notsniped">GitHub</a></li>
+                    <li><a href="https://github.com/PyBotDevs">NKA (my GitHub organization)</a></li>
+                </ul>
+            </div>
+        </div>
+        <br>
+        <br>
+        <br>
         <center>
             <div id="footer">
                 &copy; notsniped 2023-present | This page is open-source and licensed with the GPL 3.0 license.
