Add `clear` and `dark-bg` color classes for buttons

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <body>
         <div id="top-nav-bar">
             <label id="title">notsniped's bio</label>
-            <a class="button nav-bar-link" href="#">Main</a>
-            <a class="button nav-bar-link" href="https://discord.gg/jjj5vYdWMM">Discord Server</a>
-            <a class="button nav-bar-link" href="#links">Links</a>
-            <label class="button" id="fun-fact" onclick="fun_fact()" title="Click me!">Fun Fact</label>
+            <a class="button_dark nav-bar-link" href="#">Main</a>
+            <a class="button_dark nav-bar-link" href="https://discord.gg/jjj5vYdWMM">Discord Server</a>
+            <a class="button_dark nav-bar-link" href="#links">Links</a>
+            <label class="button_dark" id="fun-fact" onclick="fun_fact()">Fun Fact</label>
             <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label> <!--Used for preventing accidental cutoff of menu items on small screens-->
         </div>
         <center>
