--- a/index.html
+++ b/index.html
@@ -41,12 +41,15 @@
             <div class="item-card" id="links">
                 <label class="div-heading">My Links</label>
                 <hr>
-                <ul>
-                    <li><a href="https://discord.gg/jjj5vYdWMM">Discord Server</a></li>
-                    <li><a href="https://instagram.com/notsniped">Instagram</a></li>
-                    <li><a href="https://github.com/notsniped">GitHub</a></li>
-                    <li><a href="https://github.com/PyBotDevs">NKA (my GitHub organization)</a></li>
-                </ul>
+                <br>
+                <center>
+                    <div id="wrap-handler">
+                        <a class="button social-link" href="https://discord.gg/jjj5vYdWMM">Discord Server</a>
+                        <a class="button social-link" href="https://instagram.com/notsniped">Instagram</a>
+                        <a class="button social-link" href="https://github.com/notsniped">GitHub</a>
+                        <a class="button social-link" href="https://github.com/PyBotDevs">NKA (my GitHub organization)</a>
+                    </div>
+                </center>
             </div>
         </div>
         <br>
