Work on a sleeker, more modern look for the top-nav-bar

--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div id="top-nav-bar">
-            <label id="title">notsniped's bio</label>
-            <a class="button_dark nav-bar-link" href="#">Main</a>
-            <a class="button_dark nav-bar-link" href="https://discord.gg/jjj5vYdWMM">Discord Server</a>
-            <a class="button_dark nav-bar-link" href="#links">Links</a>
-            <label class="button_dark" id="fun-fact" onclick="fun_fact()">Fun Fact</label>
-            <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label> <!--Used for preventing accidental cutoff of menu items on small screens-->
+        <div style="display: flex; justify-content: center;">
+            <div id="top-nav-bar">
+                <center>
+                    <!--<label id="title">notsniped's bio</label>-->
+                    <a class="button_dark nav-bar-link" href="#">Main</a>
+                    <a class="button_dark nav-bar-link" href="https://discord.gg/jjj5vYdWMM">Discord Server</a>
+                    <a class="button_dark nav-bar-link" href="#links">Links</a>
+                    <label class="button_dark" id="fun-fact" style="margin-right: 20px;" onclick="fun_fact()">Fun Fact</label>
+                    <!--<label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>--> <!--Used for preventing accidental cutoff of menu items on small screens-->
+                </center>
+            </div>
         </div>
         <center>
             <div class="banner" id="heading_container">
